refactor: use parseInt instead of ctor/new Integer